--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,24 +1,97 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+/*----------------------RESET -------------------------------*/
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  line-height: 1.6rem;
+  min-height: 100vh;
+}
+
+img {
+  display: inline-block;
+  max-width: 100%;
+}
+
+a,
+p,
+ul,
+li,
+label {
+  text-decoration: none;
+  list-style: none;
+  font-family: system-ui, "Segoe UI", "Roboto", "Helvetica Neue", "Noto Sans",
+    "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  line-height: 1.35rem;
+  padding: 0;
+}
+
+figcaption {
+  display: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.75rem;
+}
+
+article {
+  margin: 1rem;
+}
+
+a.btn {
+  position: relative;
+  display: inline-block;
+  color: #000;
+  background-color: white;
+  padding: 0.2em 0.5em;
+  border-radius: 0.5em;
+  margin-top: 1rem;
+}
+a.btn::before {
+  background-color: #f809b0;
+  border-radius: 0.5em;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -0.1rem;
+  left: -0.1rem;
+  z-index: -1;
+  transition: all 0.3s ease-in-out;
+}
+a.btn::after {
+  background-color: #14f6eb;
+  border-radius: 0.5em;
+  content: "";
+  top: -0.1rem;
+  right: -0.1rem;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+/* a.btn:hover::before {
+  inset: 0;
+  right: -0.1rem;
+  top: -0.1rem;
+}
+a.btn:hover::after {
+  inset: 0;
+  left: -0.1rem;
+  bottom: -0.3rem;
+} */
