--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -48,6 +48,7 @@ h6 {
 }
 
 article {
+  justify-self: center;
   margin: 1rem;
 }
 
@@ -60,6 +61,7 @@ a.btn {
   border-radius: 0.5em;
   margin-top: 1rem;
 }
+
 a.btn::before {
   background-color: #f809b0;
   border-radius: 0.5em;
@@ -72,12 +74,13 @@ a.btn::before {
   z-index: -1;
   transition: all 0.3s ease-in-out;
 }
+
 a.btn::after {
   background-color: #14f6eb;
   border-radius: 0.5em;
   content: "";
   top: -0.1rem;
-  right: -0.1rem;
+  right: -0.11rem;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -95,3 +98,15 @@ a.btn:hover::after {
   left: -0.1rem;
   bottom: -0.3rem;
 } */
+
+
+a.btn:hover::before {
+  inset: 2px;
+  right: -0.1rem;
+  top: -0.125rem;
+}
+a.btn:hover::after {
+  inset: 2px;
+  left: -0.1rem;
+  bottom: -0.1rem;
+}
