--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -170,9 +170,9 @@ input:focus:invalid:not(:placeholder-shown) {
   display: none;
 }
 
-/* input:focus:not(:placeholder-shown) ~ .hint {                 // to uncomment if you start using regex and minvalue for Password
+input:focus:not(:placeholder-shown) ~ .hint {
   display: block;
-} */
+}
 
 input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   display: block;
@@ -188,29 +188,61 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   }
 }
 
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  overflow: hidden;
+}
+
+.container h1 {
+  font-size: 36px;
+  margin: -10px 0;
+}
+
+.container p {
+  font-size: 14.5px;
+  margin: 15px 0;
+}
+
 form {
+  width: 100%;
+}
+
+.form-box {
+  position: absolute;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background: #fff;
   display: grid;
-  gap: 0.75rem;
-  width: fit-content;
-  margin: 2rem auto;
-  font-size: 2rem;
+  place-self: center;
+  place-content: center;
+  color: #333;
+  text-align: center;
+  padding: 40px;
+  z-index: 1;
+  transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
 }
 
-.form-group {
-  display: grid;
-  gap: 0.25rem;
+.container.active .form-box {
+  right: 50%;
 }
 
-input,
-label,
-button {
-  font: inherit;
-  margin-bottom: 1rem;
+.form-box.register {
+  visibility: hidden;
+}
+.container.active .form-box.register {
+  visibility: visible;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+.input-box {
+  position: relative;
+  margin: 30px 0;
+}
+
+.input-box input {
   outline: 3px solid hsl(203, 30%, 26%);
   font-size: inherit;
   outline: 3px solid hsl(203, 30%, 26%);
@@ -218,4 +250,155 @@ input[type="password"] {
   border-radius: 0.25rem;
   border: 0;
   background-color: hsl(201, 31%, 11%);
+}
+
+.input-box input::placeholder {
+  color: #888;
+  font-weight: 400;
+}
+
+.formbtn {
+  width: 100%;
+  height: 48px;
+  background: #7494ec;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.toggle-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.toggle-box::before {
+  content: "";
+  position: absolute;
+  left: -250%;
+  width: 300%;
+  height: 100%;
+  background: linear-gradient(
+    /* 
+      in oklch produces more vibrant gradient results 
+      */ to right
+      in oklch,
+    var(--＠color-1),
+    var(--＠color-2) /* use the variables in a gradient (or wherever!) */
+  );
+  border-radius: 150px;
+  z-index: 2;
+  transition: 1.8s ease-in-out;
+}
+
+.container.active .toggle-box::before {
+  left: 50%;
+}
+
+.toggle-panel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  transition: 0.6s ease-in-out;
+}
+
+.toggle-panel.toggle-left {
+  left: 0;
+  transition-delay: 1.2s;
+}
+.container.active .toggle-panel.toggle-left {
+  left: -50%;
+  transition-delay: 0.6s;
+}
+
+.toggle-panel.toggle-right {
+  right: -50%;
+  transition-delay: 0.6s;
+}
+.container.active .toggle-panel.toggle-right {
+  right: 0;
+  transition-delay: 1.2s;
+}
+
+.toggle-panel p {
+  margin-bottom: 20px;
+}
+
+.toggle-panel .formbtn {
+  width: 160px;
+  height: 46px;
+  background: transparent;
+  border: 2px solid #fff;
+  box-shadow: none;
+}
+
+@media screen and (max-width: 650px) {
+  .container {
+    height: calc(100vh - 40px);
+  }
+
+  .form-box {
+    bottom: 0;
+    width: 100%;
+    height: 70%;
+  }
+
+  .container.active .form-box {
+    right: 0;
+    bottom: 30%;
+  }
+
+  .toggle-box::before {
+    left: 0;
+    top: -270%;
+    width: 100%;
+    height: 300%;
+    border-radius: 20vw;
+  }
+
+  .container.active .toggle-box::before {
+    left: 0;
+    top: 70%;
+  }
+
+  .container.active .toggle-panel.toggle-left {
+    left: 0;
+    top: -30%;
+  }
+
+  .toggle-panel {
+    width: 100%;
+    height: 30%;
+  }
+  .toggle-panel.toggle-left {
+    top: 0;
+  }
+  .toggle-panel.toggle-right {
+    right: 0;
+    bottom: -30%;
+  }
+
+  .container.active .toggle-panel.toggle-right {
+    bottom: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-box {
+    padding: 20px;
+  }
+
+  .toggle-panel h1 {
+    font-size: 30px;
+  }
 }
