--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -87,39 +87,48 @@ article {
 }
 
 a.btn {
-  outline: none;
   position: relative;
   display: inline-block;
-  color: hsl(0, 0%, 100%);
-  background: hsla(0, 0%, 100%, 0.2);
-  padding: 1rem;
-  border-radius: 0.5rem;
+  color: #000;
+  background-color: white;
+  padding: 0.2em 0.5em;
+  border-radius: 0.5em;
   margin-top: 1rem;
 }
-
 a.btn::before {
-  border-bottom-right-radius: 1.125rem;
-  border-top-left-radius: 1.125rem;
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+  background-color: #f809b0;
+  border-radius: 0.5em;
   content: "";
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 0.2rem;
+  bottom: -0.1rem;
+  left: -0.1rem;
   z-index: -1;
-  animation: gradient-change 2s linear infinite alternate;
-  background: linear-gradient(
-    /* 
-      in oklch produces more vibrant gradient results 
-      */ to right
-      in oklch,
-    var(--＠color-1),
-    var(--＠color-2) /* use the variables in a gradient (or wherever!) */
-  );
+  transition: all 0.3s ease-in-out;
+}
+a.btn::after {
+  background-color: #14f6eb;
+  border-radius: 0.5em;
+  content: "";
+  top: -0.1rem;
+  right: -0.1rem;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+}
+
+a.btn:hover::before {
+  inset: 2px;
+  right: -0.1rem;
+  top: -0.125rem;
+}
+a.btn:hover::after {
+  inset: 2px;
+  left: -0.1rem;
+  bottom: -0.1rem;
 }
 
 h1 {
