--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -81,6 +81,51 @@ h6 {
   }
 }
 
+.error404 {
+  display: flex;
+  height: 100vh;
+  background-color: #fff;
+}
+
+#errorParagraphe {
+  color: hsl(310 100% 59%);
+}
+
+.error404__content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.error404__content> p{
+  line-height: 2.5rem;
+}
+
+.error404__content>div> input {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  margin-top: 3rem;
+  border-radius: 10px;
+}
+
+.error404__content>div> button {
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  background-color:hsl(310 100% 59%);
+  color: hsl(177, 93%, 52%);
+}
+
+.error404__content>div> button:hover {
+  background-color: hsl(177, 93%, 52%);
+  color:hsl(310 100% 59%) ;
+}
+
 article {
   justify-self: center;
   margin: 1rem;
