light mode and dark mode is available

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -81,6 +81,10 @@ body.dark-mode {
   color: #ffffff;
 }
 
+button#modeToggle img {
+  background: none;
+}
+
 /*----------------------GLOBAL -------------------------------*/
 
 @property --＠color-1 {
