--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -65,6 +65,8 @@ h6 {
   --clr-success: hsl(143, 100%, 26%);
   --clr-warning: hsl(43, 100%, 66%);
   --clr-error: hsl(348, 55%, 49%);
+  --box-shadow-unlike : 0px 0px 30px 11px var(--blue-primary);
+  --box-shadow-like : 0px 0px 30px 12px var(--pink-primary);
 }
 
 /* Light Mode */
@@ -258,12 +260,20 @@ h1 {
   height: 30px;
 }
 
-svg {
- 
-  backdrop-filter: blur(150%);
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.2);
+.likes {
+  position: relative;
+  
 }
 
+.glow {
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  box-shadow: var(--box-shadow-unlike);
+  width: 1px;
+  height: 1px;
+}
 /*----------------------FORM -------------------------------*/
 input:focus:valid,
 input:valid:not(:placeholder-shown) {
