--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -110,10 +110,30 @@ button#modeToggle img {
 }
 
 /*-------------------HEADER----------------------*/
+#sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  border: 1px solid hsl(177, 93%, 52%);
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+
+}
+
+.icons {
+  width: 30px;
+  height: 30px;
+
+}
 
 ul{
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+}
+
+li {
+  padding: 1rem;
+  margin: 1rem;
 }
 
 /* HOMEPAGE */
