--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -130,7 +130,7 @@ ul{
 li {
   padding: 1rem;
   margin: 1rem;
-
+}
 /*----------------------- HOMEPAGE-------------------- */
 section > h1 {
   justify-self: center;
