--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -114,8 +114,8 @@ body.light-mode {
 
 /*-------------------HEADER----------------------*/
 
-.hero{
-  position: fixed;
+.hero {
+  // position: fixed;
   z-index: 500;
   display: flex;
   justify-content: center;
@@ -130,12 +130,12 @@ body.light-mode {
   color: #14f6eb;
 }
 
-.codocicon{
+.codocicon {
   height: 6rem;
 }
 
 #sidebar {
-  position:fixed;
+  position: fixed;
   z-index: 600;
   display: flex;
   flex-direction: column;
@@ -152,22 +152,30 @@ body.light-mode {
   margin: 2rem 0 2rem 0;
 }
 
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 li {
   margin: 1rem;
 }
 
 a {
-  
   color: #14f6eb;
+  // text-shadow:1px 1px 2px hsl(310 100% 59%);
   font-size: 1.5rem;
+
+  &:hover {
+    color: hsl(310 100% 59%);
+    // text-shadow:1px 1px 2px hsl(177, 93%, 52%) ;
+  }
 }
 
-a:hover {
-  color: #fff;
-}
 
-.icons{
-  width: 2rem;
+.icons {
+  width: 1.5rem;
 }
 /*----------------------- HOMEPAGE-------------------- */
 
@@ -229,7 +237,29 @@ article {
   backdrop-filter: blur(120%);
   box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
   border-radius: 20px;
+
+  &.homepage-article:hover{
+    border: 1px solid var(--clr-primary-500) ;
+    margin-block: 1rem;
+    scale: 102%;
+  }
+
+  .clamptext {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    line-clamp: 4; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
+
+.ariane{
+  text-align: center;
+  margin-block: 1.5rem;
+}
+
+
+
 
 a.btn {
   position: relative;
