--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -153,7 +153,7 @@ body.light-mode {
   background-color: #333;
   border-right: 1px solid #14f6eb;
   box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  
+
   .header-logo {
     margin: 2rem 0 2rem 0;
   }
@@ -170,10 +170,10 @@ body.light-mode {
         color: #14f6eb;
         font-size: 1.5rem;
         &:hover {
-          color: #fff;
+          color: var(--clr-primary-500);
         }
         .icons {
-          width: 2rem;
+          width: 1.5rem;
         }
       }
     }
@@ -239,11 +239,11 @@ article {
   border: 1px solid #14f6eb;
   background-color: transparent;
   backdrop-filter: blur(120%);
-  box-shadow: var(--box-shadow-secondary);
+  box-shadow: 0px 8px 21px 8px var(--clr-secondary-100);
   border-radius: 20px;
 
-  &.homepage-article:hover{
-    border: 1px solid var(--clr-primary-500) ;
+  &.homepage-article:hover {
+    border: 1px solid var(--clr-primary-500);
     margin-block: 1rem;
     scale: 102%;
   }
@@ -251,67 +251,49 @@ article {
   .clamptext {
     display: -webkit-box;
     -webkit-line-clamp: 4;
-    line-clamp: 4; 
+    line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
+
+  .article_footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .like_button {
+    width: 30px;
+    height: 30px;
+  }
+
+  .likes {
+    position: relative;
+    cursor: pointer;
+  }
+
+  .glow-unlike,
+  .glow-like {
+    position: absolute;
+    top: 35%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    width: 1px;
+    height: 1px;
+  }
+
+  .glow-unlike {
+    box-shadow: var(--box-shadow-secondary);
+  }
+
+  .glow-like {
+    box-shadow: var(--box-shadow-primary);
+  }
 }
 
-.ariane{
+.ariane {
   text-align: center;
   margin-block: 1.5rem;
-}
-
-
-
-
-a.btn {
-  position: relative;
-  display: inline-block;
-  color: #000;
-  background-color: white;
-  font-weight: 800;
-  padding: 0.2em 0.5em;
-  border-radius: 0.5em;
-  margin-top: 1rem;
-}
-
-a.btn::before {
-  background-color: #f809b0;
-  border-radius: 0.5em;
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  bottom: -0.1rem;
-  left: -0.1rem;
-  z-index: -1;
-  transition: all 0.3s ease-in-out;
-}
-
-a.btn::after {
-  background-color: #14f6eb;
-  border-radius: 0.5em;
-  content: "";
-  top: -0.1rem;
-  right: -0.1rem;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-  transition: all 0.2s ease-in-out;
-}
-
-a.btn:hover::before {
-  inset: 2px;
-  right: -0.1rem;
-  top: -0.125rem;
-}
-
-a.btn:hover::after {
-  inset: 2px;
-  left: -0.1rem;
-  bottom: -0.1rem;
 }
 
 h1 {
@@ -334,41 +316,6 @@ h1 {
   /* modern browser version */
   background-clip: text;
   color: transparent;
-}
-
-.article_footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 1rem;
-}
-
-.like_button {
-  width: 30px;
-  height: 30px;
-}
-
-.likes {
-  position: relative;
-  cursor: pointer;
-}
-
-.glow-unlike,
-.glow-like {
-  position: absolute;
-  top: 35%;
-  left: 35%;
-  transform: translate(-50%, -50%);
-  width: 1px;
-  height: 1px;
-}
-
-.glow-unlike {
-  box-shadow: var(--box-shadow-secondary);
-}
-
-.glow-like {
-  box-shadow: var(--box-shadow-primary);
 }
 
 /*----------------------FORM -------------------------------*/
