--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -166,17 +166,21 @@ body.light-mode {
     li {
       margin: 1rem;
 
-      a {
-        color: #14f6eb;
-        font-size: 1.5rem;
-        &:hover {
-          color: var(--clr-primary-500);
-        }
+      
         .icons {
           width: 1.5rem;
         }
       }
     }
+  }
+
+/*-----------------------GLOBAL------------------------*/
+
+a {
+  color: #14f6eb;
+  font-size: 1.5rem;
+  &:hover {
+    color: var(--clr-primary-500);
   }
 }
 
